--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 
 <body>
     <div class="container">
-        <h1 class="title">CSV to JSON Converter</h1>
+        <h1 class="title" style="text-align: center; line-height: 1.4;">
+            <span style="display: block; font-size: 1rem; color: #6b7280; font-weight: 500;">
+                Eric's Super Cool
+            </span>
+            <span style="display: block; font-size: 2rem; color: #0891b2; font-weight: 700;">
+                CSV to JSON Converter
+            </span>
+            <span style="display: block; font-size: 1rem; color: #6b7280; font-weight: 400;">
+                for Auth0 Bulk User Upload
+            </span>
+        </h1>
 
         <div class="converter-layout">
             <!-- CSV Input Panel -->
