--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span style="display: block; font-size: 1rem; color: #6b7280; font-weight: 500;">
                 Eric's Super Cool
             </span>
-            <span style="display: block; font-size: 2rem; color: #0891b2; font-weight: 700;">
+            <span style="display: block; font-size: 2rem;   color: #00c895; font-weight: 700;">
                 CSV to JSON Converter
             </span>
             <span style="display: block; font-size: 1rem; color: #6b7280; font-weight: 400;">
